tests/fixtures/invalid/none_rshift_str.py
# Cannot right shift None and Str
x: None = None >> "hello"
